<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ipad™</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="buffring">Buffering...</string>
    <string name="noNetwork" translatable="false">No Network</string>
    <string name="cheakConn" translatable="false">Please check your network connection</string>
    <string name="openSett" translatable="false">Open Settings</string>
    <string name="close">Close</string>
    <string name="error_no_camera" translatable="false">error_no_camera</string>
    <string name="text_done">Done</string>
    <string name="save">save</string>
    <string name="error_no_images">No files found</string>
    <string name="picker_images">Photo</string>
    <string name="picker_videos">Video</string>
    <string name="picker_documents">Document</string>
    <string name="picker_audio">Audio</string>
    <string name="text_camera">Camera</string>
    <string name="select_image">Tap to select</string>
    <string name="error_image_select_limit" translatable="false">You can select only %1$s files</string>
    <string name="text_selected" translatable="false">%d item(s) selected</string>
    <string name="error_image_select_size_limit" translatable="false">Total file size cannot be greater than %1$s.</string>
    <string name="error_create_image_file" translatable="false">Failed to create image file</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="p1">To ensure a safe, nonoffensive environment for all of our users, we have established our Terms of Use and Service. It spells out what you can expect from us and what we expect from you. By accessing any areas of the IPAD Site, users (Users) agree to be legally bound and to abide by the terms set forth below. the IPAD Site is owned and operated by RXD Media, LLC ("RXD"). Any references herein to IPAD shall be deemed to refer to the IPAD Site and/or RXD, as applicable under the circumstances.</string>
    <string name="p2">IPAD, IPAD TODAY and ipadtoday.com are service marks of RXD or its affiliates. All rights reserved. These and other IPAD graphics, logos and service marks and trademarks of RXD and its affiliates may not be used without prior written consent of RXD or its affiliates, as the case may be. All other trademarks, product names, and company names and logos appearing on the IPAD Site are the property of their respective owners.</string>
    <string name="p3">User expressly agrees that use of the IPAD Site is at Users sole risk. Neither RXD nor its affiliates nor any of their officers, directors, or employees, agents, third-party content providers, merchants, sponsors, licensors (collectively, Providers), or the like, warrant that the IPAD Site will be uninterrupted or error free, nor do they make any warranty as to the results that may be obtained from the use of the IPAD Site, or as to the accuracy, reliability, or currency of any information content, service, or merchandise provided through the IPAD Site.</string>
    <string name="p5">Under no circumstance shall RXD or any other party involved in creating, producing, or distributing the IPAD Site be liable for any direct, indirect, incidental, special or consequential damages that result from the use of or inability to use the IPAD Site, including but not limited to reliance by User on any information obtained from the IPAD Site or that result from mistakes, omissions, interruptions, deletion of files or E-mail, errors, defects, viruses, delays in operation or transmission, or any failure of performance, whether or not resulting from acts of God, communications failure, theft, destruction, or unauthorized access to the IPAD Sites records, programs or services. User hereby acknowledges that this paragraph shall apply to all content, merchandise, and services available through the IPAD Site. Because some states do not allow the exclusion or limitation of liability for consequential or incidental damages, in such states liability is limited to the fullest extent permitted by law.</string>
    <string name="p6">User acknowledges that the IPAD Site contains information, data, software, photographs, graphs, videos, typefaces, graphics, music, sounds and other material (collectively, Content) that are protected by copyrights, trademarks, trade secrets, or other proprietary rights, and that these rights are valid and protected in all forms, media and technologies existing now or hereinafter developed. All Content is protected as a collective work under the U.S. copyright laws, and RXD owns a copyright in the selection, coordination, arrangement, and enhancement of such Content. User may not modify, remove, delete, augment, add to, publish, transmit, participate in the transfer or sale of, create derivative works from, or in any way exploit any of the Content, in whole or in part. If no specific restrictions are displayed, Users may make copies of select portions of the Content, provided that the copies are made only for Users personal use and that User maintains any notices contained in the Content, such as all copyright notices, trademark legends, or other proprietary rights notices. Except as provided in the preceding sentence or as permitted by the fair use privilege under the U.S. copyright laws (see, e.g., 17 U.S.C.A. Section 107), User may not upload, post, reproduce, or distribute in any way Content protected by copyright, or other proprietary right, without obtaining permission of the owner of the copyright or other proprietary right. In addition to the foregoing, use of any software Content shall be governed by the software license agreement accompanying such software.</string>
    <string name="p7">Except as set forth in Section III(A) above, User may upload to or otherwise distribute on the IPAD Site only Content that is not subject to any copyright or other proprietary rights protection (collectively, Public Content), or Content in which the author has given express authorization for distribution on the World Wide Web. Any copyrighted or other proprietary Content distributed with the consent of a copyright owner should contain a phase such as "Copyright, owned by [name of owner]; used by permission." The unauthorized submission or distribution of copyrighted or other proprietary Content is illegal and could subject the User to criminal prosecution as well as personal liability for damages in a civil suit. User will be liable for any damage resulting from any infringement of copyrights or proprietary rights, or from any other harm arising from such submission. Neither RXD, nor its affiliates, nor any of their officers, directors, employees, agents, Providers, or the like, will be liable for any damage resulting from any infringement of copyrights or proprietary rights, or from any other harm arising from such User submission. In compliance with the Digital Millennium Copyright Act, Users and other persons can report an infringement to RXD at the following E-mail address: inquiry@rxdmedia.com By submitting Content to any User submit areas, including without limitation any product reviews or participation in any chat rooms, user automatically grants, or warrants, that the owner of such Content has expressly granted RXD the royalty-free, perpetual, irrevocable, nonexclusive right and license to use, reproduce, publish, translate, sublicense, copy and distribute the Content in whole or in part worldwide and/or to incorporate it in other works in any form, media or technology now known or hereafter developed for the full term of any copyright that may exist in such Content. User also permits any other User to access, store, or reproduce the Content for that Users personal use. Subject to this grant, the owner of Content placed on the IPAD Site retains any and all rights which may exist in such Content.</string>
    <string name="p8">RXD is a distributor and not a publisher of Content supplied by third parties and Users. RXD has no more editorial control over such Content than does a public library or newsstand. Any opinions, advice, statements, services, offers, or other information that constitutes part of Content expressed or made available by third parties, including Providers or any other User of the IPAD Site, are those of the respective authors or distributors and not of RXD or its affiliates or any of their officers, directors, employees or agents. Neither RXD nor its affiliates, nor any of their officers, directors, employees or agents, nor any third party, including any Provider, or any other User of the IPAD Site, guarantees the accuracy, completeness or usefulness of any Content, nor its merchantability or fitness for any particular purpose. In many instances, the Content available through the IPAD Site represents the opinions and judgments of the respective Provider, or User not under contract with RXD. RXD neither endorses nor is responsible for the accuracy or reliability of any opinion, advice, or statement made on the IPAD Site by anyone other than authorized RXD employees. Under no circumstances shall RXD, or its affiliates, or any of their officers, directors, employees or agents be liable for any loss, damage or harm caused by Users reliance on information obtained through the IPAD Site. It is the responsibility of User to evaluate the information, opinion, advice, or other Content available through the IPAD Site.</string>
    <string name="pp28">The dog cant eat your homework when its in the cloud. Teachers can keep students, and their families, up to date on happenings, expectations and progress.</string>
    <string name="pp29">Connection is key. The classroom is expanding outside of its four walls and is traveling the information superhighway. Classroom communities can share information and resources among themselves as well as in larger school communities locally and far reaching. Dont miss the bus.</string>
    <string name="pp30">Classmates can connect to one another, from home, to collaborate on homework, projects and even sharpen study skills.</string>
    <string name="pp31">Make homework time less stressful with tools to support your student at home in a variety of subject areas.</string>
    <string name="nov"><b>November 09 2017\n\n</b><b>
ipad™, Keeping You Connected with your Family, Friends, and Business for Life</b></string>
    <string name="oct">
        <b>October 18 2017\n\n</b><b>ipad™ Celebrates its 10th Anniversary with New Release</b></string>
    <string name="dec" translatable="false"><b>December 13 2016\n\n</b>
RXD Media, LLC, is continuing the expansion of its ipad™ services with a push into the burgeoning education sector. RXD seeks to be at the forefront of this growing market.</string>
    <string name="oct2" translatable="false"><b>October 09 2016</b><b>
\n\nOn September 14, 2016, the United States Trademark Trial and Appeal Board denied a motion for summary judgment filed by IP Application Development, LLC, a wholly-owned subsidiary of Apple, Inc. that licenses the IPAD trademark to Apple, regarding RXDs rights in its ipad™Service Mark.</b></string>
    <string name="Submit">Submit</string>
    <string name="Enterregemail">Enter Registered Email</string>
    <string name="forgetpass">Forgot password ?</string>
    <string name="entername">Enter Name</string>
    <string name="enterdesc">Enter Description...</string>
    <string name="When">When</string>
    <string name="selectdate">Select Date</string>
    <string name="selecttime">Select Time</string>
    <string name="Reminder">Reminder</string>
    <string name="Account">Account:</string>
    <string name="Reset">Reset</string>
    <string name="ARCHIVE" translatable="false">ARCHIVE</string>
</resources>