<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/ARCHIVE"
                android:textAlignment="center"
                android:textSize="@dimen/_14dp" />

            <TextView
                android:id="@+id/nov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/nov"
                android:textAlignment="center"
                android:textSize="@dimen/_12dp" />

            <TextView
                android:id="@+id/oct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/oct"
                android:textAlignment="center"
                android:textSize="@dimen/_12dp" />

            <TextView
                android:id="@+id/dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/dec"
                android:textAlignment="center"
                android:textSize="@dimen/_12dp" />

            <TextView
                android:id="@+id/oct2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/oct2"
                android:textAlignment="center"
                android:textSize="@dimen/_12dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>