<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/no_network" />


    <TextView
        android:id="@+id/messageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/noNetwork"
        android:textColor="@color/blackMedium"
        android:textSize="@dimen/_22dp" />


    <TextureView
        android:id="@+id/messageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/cheakConn"
        android:textColor="@color/blackMedium"
        android:textSize="@dimen/_18dp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/pop_up_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical">

        <include layout="@layout/fn_alert_footer_n" />
    </LinearLayout>

</LinearLayout>