<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_layout_titleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10dp"
        android:background="#fff"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/forgetpass"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_15dp"
            android:background="#00000000"
            android:clickable="true"
            android:gravity="left|center"
            android:hint="@string/Enterregemail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#919191"
            android:textSize="14dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginTop="@dimen/_15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogIn"
                style="@style/DefaultButtonText"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_marginRight="@dimen/_5dp"
                android:layout_weight="0.5"
                android:textSize="12sp"
                android:background="@drawable/button_login"
                android:gravity="center"
                android:text="@string/Submit" />

            <Button
                android:id="@+id/btncancel"
                style="@style/DefaultButtonText"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_weight="0.5"
                android:textSize="12sp"
                android:background="@drawable/button_login"
                android:gravity="center"
                android:text="@string/button_label_cancel" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>
</LinearLayout>